k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sound-recorder
  labels:
    name: sound-recorder
