k8s/service-nodeport-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: sound-recorder
  labels:
    app: sound-recorder
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 443
    nodePort: 30443
    protocol: TCP
    name: https
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: sound-recorder
