k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sound-recorder
  labels:
    app: sound-recorder
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 443
    nodePort: 30443
    protocol: TCP
    name: https
  selector:
    app: sound-recorder
